<package>
  <name>ocl</name>
  <version>2.7.0</version>
  <description>
    Orocos component library
    This package contains standard components for the Orocos Toolchain
  </description>
  <license>LGPL v2</license>
  <author>OCL Development Team</author>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">OCL Development Team</maintainer>
  <url>http://www.orocos.org/ocl</url>
  
  <buildtool_depend>cmake</buildtool_depend>
  <run_depend>catkin</run_depend>
  
  <build_depend>libreadline-dev</build_depend>
  <build_depend>libncurses-dev</build_depend>
  <build_depend>lua-dev</build_depend>
  <build_depend>netcdf</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>log4cpp</build_depend>

  <run_depend>libreadline-dev</run_depend>
  <run_depend>libncurses-dev</run_depend>
  <run_depend>lua-dev</run_depend>
  <run_depend>netcdf</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>log4cpp</run_depend>

  <export>
    <build_type>
      cmake
    </build_type>
  </export>


</package>

