<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocl</name>
  <version>2.10.0</version>
  <description>
    Orocos component library
    This package contains standard components for the Orocos Toolchain
  </description>
  <license>GPLv2</license> <!-- Compile with -DNO_GPL=ON to exclude GPL-licensed code. -->
  <license>LGPL-2.1</license>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>
  <url>http://www.orocos.org/ocl</url>

  <author>OCL Development Team</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend> <!-- optional -->

  <depend>libncurses-dev</depend>
  <depend>libreadline-dev</depend>
  <depend>log4cpp</depend>
  <depend>lua-dev</depend>
  <depend>netcdf</depend>
  <depend>rtt</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
